# apps/core/docs/swagger.yaml
@@ -5474,6 +5474,10 @@ paths:
                 data:
                   $ref: '#/definitions/api.CoreMonitorManagementResponse'
               type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.APIResponse'
         "404":
           description: Not Found
           schema:
